# ClanTune

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  api.md  format_code.py  genetics_spec.md  proposal.md  pyproject.toml
.github/workflows/: validate-release.yml
documents/: Allele.md  abstract_strategies.md  ancestry_strategies.md  crossbreeding_strategies.md  expression.md  genetics_lifecycle.md  genome.md  individual.md  mutation_strategies.md  state.md  tree_utiliities.md
documents/genetics/: abstract_strategies.md  ancestry_strategies.md  crossbreeding_strategies.md  genome.md  mutation_strategies.md
documents/methodology/: autonomy.md  bootup.md  coding_standards.md  correctness_gates.md  git_safety.md  philosophy_and_vision.md  post_work_report.md  testing_standards.md  writing_specifications.md
src/clan_tune/: clan_loaders.py  clan_models.py  clan_specifications.py  lightning.py  utilities.py
src/clan_tune/clan/: communication.py  individual.py  state.py  tree_utilities.py
src/clan_tune/genetics/: abstract_strategies.py  alleles.py  ancestry_strategies.py  crossbreeding_strategies.py  expression.py  genome.py  mutation_strategies.py
tests/: test_alleles.py
tests/genetics/: test_alleles.py
tests/genetics/alleles/: test_abstract_allele.py  test_allele_utilities.py  test_concrete_alleles.py  test_tree_helpers.py  test_tree_walking.py
tests/genetics/ancestry/: test_ancestry_strategies.py
tests/genetics/genome/: test_genome_construction.py  test_genome_integration.py  test_genome_serialization.py  test_genome_strategy_support.py  test_genome_utilities.py
tests/genetics/strategies/: test_abstract_ancestry_strategy.py  test_abstract_crossbreeding_strategy.py  test_abstract_mutation_strategy.py  (+2 more)
(+6 files in other folders)
